creat master and org tempalte and get by id fix
